// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardLoader > renders CardLoader Children component when query is not fetching 1`] = `
<div>
  <div
    role="presentation"
  >
    Test
  </div>
</div>
`;

exports[`CardLoader > renders CardLoader Skeleton component when query is fetching 1`] = `
<div>
  <div
    class="animate-pulse rounded-md bg-primary/10"
    data-testid="card-loader"
  />
</div>
`;

exports[`CardLoader > renders CardLoader component without crashing 1`] = `
<div>
  <div
    class="animate-pulse rounded-md bg-primary/10"
    data-testid="card-loader"
  />
</div>
`;

exports[`CardNoData > renders CardNoData Children component when query is fetched and there is data 1`] = `
<div>
  <div
    role="presentation"
  >
    Test
  </div>
</div>
`;

exports[`CardNoData > renders CardNoData component when query is fetched and no data 1`] = `
<div>
  <div
    class="flex grow flex-col items-center justify-center space-y-6 py-12"
  >
    <img
      alt="No data"
      data-nimg="1"
      decoding="async"
      height="96"
      loading="lazy"
      src="/images/no-data.svg"
      style="color: transparent;"
      width="149"
    />
    <div
      class="text-center text-sm font-medium text-blue-900"
    >
      translated
    </div>
  </div>
</div>
`;

exports[`CardNoData > renders CardNoData component without crashing 1`] = `
<div>
  <div
    class="flex grow flex-col items-center justify-center space-y-6 py-12"
  >
    <img
      alt="No data"
      data-nimg="1"
      decoding="async"
      height="96"
      loading="lazy"
      src="/images/no-data.svg"
      style="color: transparent;"
      width="149"
    />
    <div
      class="text-center text-sm font-medium text-blue-900"
    >
      translated
    </div>
  </div>
</div>
`;
